# plutus-onchain

./: ReadMe.md  cabal.project  hie.yaml  plutus-onchain.cabal  shell.nix
app/: Test.hs
docs/: Plutus-OnChain-Bits.html  Plutus-OnChain-Random.html  doc-index.html  index.html  plutus-onchain.haddock
docs/src/: Plutus.OnChain.Bits.html  Plutus.OnChain.Random.html
nix/: haskell.nix
src/Plutus/OnChain/: Bits.hs  Random.hs
